Removed a tag mobile menu padding as causing alignment issues

--- a/mobile_style.css
+++ b/mobile_style.css
@@ -89,7 +89,6 @@
   }
 
   #mobile-menu a {
-    padding: 20px;
     font-size: 3rem;
     display: inline;
     color: white;
